# magface-active-learning

./: .gitignore  CONTENT.md  README.md  compute_baseline_metrics.py  config.yaml  context.md  create_test_feedback.py  environment.yml  eval_function_pairs.py  evaluate_finetuned_model.py  finetune_and_update_config.py  finetune_on_feedback.py  img_embedding.py  magface_inference.py  requirements.txt  run_img_embedding.py  test_output.txt  visualize_errors.py
mag_umair/mag_umair/: FINETUNING.md  README.md  config.yaml  pyproject.toml
mag_umair/mag_umair/docs/: client_doc.txt  context.md  design_recommendations.md  temp_clustering_integration_guide.md  temp_clustering_schema_api.md  temp_clustering_schema_api_v2.md
mag_umair/mag_umair/facelib/: __init__.py  exceptions.py  library.py  types.py
mag_umair/mag_umair/scripts/: evaluate.py  finetune.py  reindex_faces.py  split_train_test.py  test_indexing.py  test_pipeline.py  validate_finetuning.py
mag_umair/mag_umair/src/: __init__.py  config_loader.py
mag_umair/mag_umair/src/alignment/: __init__.py  face_align.py
mag_umair/mag_umair/src/detection/: __init__.py  retinaface_detector.py
mag_umair/mag_umair/src/embedding/: __init__.py  magface_embedder.py
mag_umair/mag_umair/src/filter/: __init__.py  anime_real_classifier.py  pipeline.py  quality.py
mag_umair/mag_umair/src/matching/: __init__.py  face_index.py
mag_umair/mag_umair/src/training/: __init__.py  contrastive_loss.py  pair_dataset.py  trainer.py
megaface/: BASELINE_RESULTS.md  baseline_metrics.txt  gen_megaface.py  run_test.sh
megaface/data/: facescrub_abs.list  facescrub_lst_all  ulog
megaface/devkit/experiments/: run_experiment.py
megaface/devkit/templatelists/: get_all_ids.py  ids
megaface/pairs_data/: balanced_pairs.json
